# BioCMA-MCST

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  .ruff.toml  CITATION  NOTICE  README.md  _2home_2runner_2work_2BioCMA-MCST_2BioCMA-MCST_2apps_2libs_2mc_2public_2mc_2prng_2prng_8hpp-example.html  alg_8hpp_source.html  alias_8hpp_source.html  annotated.html  annotated_dup.js  api.html  api_2public_2api_2results_8hpp_source.html  api_8hpp_source.html  benches.html  cache__hydro__state_8hpp_source.html  case__data_8hpp_source.html  citelist.html  classBoundLoadBalancer-members.html  classBoundLoadBalancer.html  classBoundLoadBalancer.js  classBoundLoadBalancer__coll__graph.map  classBoundLoadBalancer__coll__graph.md5  classBoundLoadBalancer__inherit__graph.map  classBoundLoadBalancer__inherit__graph.md5  classBoundLoadBalancer_a98fceab7666ed5c0d6c0687e4c76e150_cgraph.map  classBoundLoadBalancer_a98fceab7666ed5c0d6c0687e4c76e150_cgraph.md5  classBoundLoadBalancer_ae5fb97683fc4a1537402d1d3823fa65a_cgraph.map  classBoundLoadBalancer_ae5fb97683fc4a1537402d1d3823fa65a_cgraph.md5  classCanary-members.html  classCanary.html  classCanary.js  classCanary_a1e5c8ddec51f2d92679b0a45e9d20205_cgraph.md5  classCanary_a3354a7defc15e87e7f356f5beb77bee6_icgraph.map  classCanary_a3354a7defc15e87e7f356f5beb77bee6_icgraph.md5  classCanary_a830bafc8005e456915e1ef25f942274f_cgraph.map  (+2969 more)
apps/api/: meson.build
apps/api/includes/: udf_handle.hpp
apps/api/public/api/: api.hpp  api_raw.h  results.hpp
apps/api/python/: __init__.py  init.py
apps/api/src/: api.cpp  api_python.cpp  api_raw.cpp  udf_handle.cpp
apps/api/tests/: common_test.hpp  meson.build  test_api.cpp  test_api_raw.cpp  test_api_throw.cpp
apps/autogenerated/: biocma_cst_config.hpp.in  meson.build  model_loader.cxx  model_loader.hxx  variant_model.hxx
apps/cli/: meson.build
apps/cli/includes/: case_data.hpp  cli_parser.hpp  data_exporter.hpp  dynlib_loader.hpp  host_specific.hpp  import_py.hpp  pinit.hpp  post_process.hpp  rt_init.hpp  scalar_factory.hpp  signal_handling.hpp  siminit.hpp  stream_io.hpp  sync.hpp  update_flows.hpp  worker_specific.hpp
apps/cli/includes/dataexporter/: data_exporter.hpp  factory.hpp  impl_dataexporter.hpp
apps/cli/includes/messages/: impl_op.hpp  init.hpp  iteration_payload.hpp  message_t.hpp  mpi_types.hpp  pmessage.hpp  wrap_mpi.hpp
apps/cli/src/: cli_parser.cpp  data_exporter.cpp  host_specific.cpp  import_py.cpp  iteration_payload.cpp  main.cpp  mpi_init.cpp  mpi_wrap.cpp  pinit.cpp  post_process.cpp  rt_init.cpp  scalar_factory.cpp  signal_handling.cpp  siminit.cpp  stream_io.cpp  sync.cpp  update_flows.cpp  worker_specific.cpp
apps/cli/src/dataexporter/: data_exporter.cpp  factory.cpp  impl_dataexporter.cpp
apps/cli/tests/: meson.build  test_cli.cpp  test_main.cpp  test_module.py  test_pymodule.cpp  test_rt_init.cpp  test_scalar_factory.cpp
apps/core/: meson.build
apps/core/includes/: host_export_handler.hpp  host_specific.hpp  impl_post_process.hpp  post_process.hpp  progress_bar.hpp  serde.hpp  signal_handling.hpp  sync.hpp  worker_specific.hpp
apps/core/includes/dataexporter/: data_exporter.hpp  ddd_de.hpp  de.hpp  impl_dataexporter.hpp  main_exporter.hpp  partial_exporter.hpp
apps/core/includes/load_balancing/: iload_balancer.hpp  impl_lb.hpp
apps/core/pch/: pch.h
apps/core/public/core/: case_data.hpp  cp_flag.hpp  global_initaliser.hpp  post_process.hpp  probe.hpp  scalar_factory.hpp  simulation_parameters.hpp
apps/core/src/: case_data.cpp  global_initaliser.cpp  host_export_handler.cpp  host_specific.cpp  post_process.cpp  progress_bar.cpp  scalar_factory.cpp  serde.cpp  signal_handling.cpp  simulation_parameters.cpp  sync.cpp  worker_specific.cpp
apps/core/src/dataexporter/: data_exporter.cpp  impl_dataexporter.cpp  impl_de.cpp  impl_default_dataexporter.cpp  impl_hdf5_dataexporter.cpp  main_exporter.cpp  partial_exporter.cpp
apps/core/src/load_balancing/: iload_balancer.cpp  impl_lb.cpp
apps/core/tests/: meson.build  test_load_balancing.cpp  test_postprocess.cpp  test_scalar_factory.cpp  test_scalar_read.h5  test_signal_handler.cpp
apps/libs/biomodels/: meson.build
apps/libs/biomodels/ext/: udf_includes.cpp  udf_includes.hpp
apps/libs/biomodels/src/: copymodel_monod2.cpp  light_model.cpp  model_ecoli.cpp  model_interdivision_time.cpp  model_lb.cpp  model_light.cpp  model_monod.cpp  model_monod_age.cpp  model_monod_tune.cpp  model_simple.cpp  model_uptake.cpp  model_uptake_acetate.cpp  model_uptake_implicit.cpp  model_user.cpp  monod.cpp  simple_model.cpp
apps/libs/biomodels/tests/: meson.build
apps/libs/cma_utils/: meson.build
apps/libs/cma_utils/ext/: lib.rs.h
apps/libs/cma_utils/includes/: discontinuous_fmt.hpp  get_cumulative_proba.hpp  linter_fmt.hpp
apps/libs/cma_utils/src/: cache_hydro_state.cpp  discontinuousfmt.cpp  fmt_factory.cpp  get_cumulative_proba.cpp  transitionner.cpp  transport.cpp  utils.cpp
apps/libs/cma_utils/tests/: meson.build  (+3 more)
apps/libs/common/: meson.build
apps/libs/mc/: meson.build
apps/libs/models/: meson.build
apps/libs/mpi_w/: meson.build
apps/libs/pymodule/: meson.build
apps/libs/simulation/: meson.build
apps/post_process/: __init__.py  __main__.py  initialiser.py  io.py  meson.build  old_read_results.py  properties.py  read_results.py  rtd.py
apps/udf_model/: impl.cpp  meson.build  minimal.cpp
tools/: .gitignore  0d_compare.py  batch.py  cases.xml  check_mixing.py  cli_formater.py  compressor.py  exec.py  init.py  make_doc.py  merge_results.py  meson.build  mk_template.py  read_results.py  run.sh  runner.py  series_from_data.py  show_c.py  steady.py  template.tar
tools/benchs/: bench.sh  bench_perf.sh  benchmark.py  cstyle.mpstyle
tools/model_fuzzing/: embed.cpp  embed.hpp  fuzzing_plot.py  main.cpp  meson.build
tools/post_process/: check_mixing.py  population_growth.py  property_distribution.py  read_results.py  series_from_data.py  test.py
tools/simulation_analysis/: 0d_compare.py  check_biomass.py  check_init.py  meta.py  rtd.py  steady.py
(+820 files in other folders)
