option('use_dynamic_module', type: 'boolean', value: false)
option('use_cuda', type: 'boolean', value: false)
option('use_system_kokkos', type: 'boolean', value: false)
option('python_install',type: 'boolean',value:false)
option('use_cereal',type: 'boolean',value:true)
option('compile_tools',type: 'boolean',value:false)
option('ci_execution',type: 'boolean',value:false)
option('build_test',type: 'boolean',value:false)
option('build_c_api',type: 'boolean',value:true)
option('build_python_api',type: 'boolean',value:true)
