[build-system]
build-backend = 'mesonpy'
requires = ['meson-python','pybind11','meson >= 1.3.0']


[tool.meson-python.args]
setup = ['-Dcpp_std=gnu++20','-Dinstall_post_processing=true']


[project]
name = 'biomc_post_processing'
version = '0.2.0'
description = 'Utils for post-processing Monte-Carlo simulation data'
readme = 'README.md'
requires-python = '>=3.10'


authors = [
  {name = 'CASALE Benjamin'}
]

maintainers = [
  {name = 'CASALE Benjamin'}
]

dependencies = [
  'numpy==1.26.4',
  'vtk==9.3.0',
  'matplotlib==3.8.4',
  'cmtool>=1.0.0',
  'h5py>=3.11.0',
  'SciencePlots>=2.1.1'
]

keywords = [
  'numerical methods',
  'stirred tank bioreactor',
  'bioprocess engineering',
  'computational fluid dynamics',
  'scientific computing'
]


[project.optional-dependencies]
dev = [
  'black == 23.3.0',
  'pytest == 7.3.1',
  'pytest-cov == 4.0.0'
]


[tool.pytest.ini_options]
addopts = "-v --durations=3"
junit_family = "xunit2"
markers = [
  "integration: marks as integration test",
  "slow: marks tests as slow",
  "unit: fast offline tests"
]
pythonpath = [ "cmtool/src" ]
testpaths = "tests/python"
