if get_option('compile_tools')
subdir('model_fuzzing')
endif

# FIXME

# install_data(
#   'runner.py',
#   install_dir: global_install_dir,
#   rename: 'runner.py'
# )

# runner_target = custom_target(
#   'runner',
#   output: 'runner.py',
#   input: 'runner.py',
#   command: ['cp', '@INPUT@', '@OUTPUT@'],
#   install: true,
#   install_dir: global_install_dir
# )


# install_data(
#   'cli_formater.py',
#   install_dir: global_install_dir,
#   rename: 'cli_formater.py'
# )

